# onewire

./: .eil.yml  CMakeLists.txt  README.md  idf_component.yml
.github/workflows/: publish-esp-component.yml  validate-esp-component.yml
docs/: index.rst
examples/default/main/: idf_component.yml
